# Decision-Tree

./: .gitignore  DT1.sln  README_new.txt  c50debug.txt  c50env.txt
C50/: .gitignore  CMakeLists.txt  Makefile  ProcessWithRangeData.c  c5.0.dt_entropy  c5.0.dt_penalty  c5.0dbg  c50.c  classify.c  confmat.c  construct.c  contin.c  defns.i  extern.i  formrules.c  formtree.c  getdata.c  getnames.c  global.c  implicitatt.c  info.c  mcost.c  modelfiles.c  p-thresh.c  preprocess.sh  prune.c  report.c  rules.c  ruletree.c  siftrules.c  sort.c  sortrec.i  trees.c  update.c  util.c  utility.c  xval.c
C50/cpp_wrapper/: CMakeLists.txt  Makefile  cmap.cpp  cmap.h  sort_rec_list.cpp  sort_rec_list.h  stack.c  stack.h
DT1/: DT1.vcxproj  DT1.vcxproj.filters  Data.cpp  Data.h  DecisionTree.cpp  DecisionTree.h  InformationEntropy.cpp  InformationEntropy.h  Interval.cpp  Interval.h  dt.cpp
OriC50/: .gitignore  CMakeLists.txt  Makefile  c5.0.dt_entropy  c5.0.dt_penalty  c5.0dbg  c50.c  construct.c  contin.c  defns.i  discr.c  formtree.c  getdata.c  preprocess.sh  subset.c
OriC50/cpp_wrapper/: CMakeLists.txt  tree_serializer.cpp
test/input/: cegar1.bpl  cegar1.bpl.data  cegar1.bpl.implications  cegar1.bpl.names  cegar1.c  countud.bpl  countud.bpl.data  countud.bpl.implications  countud.bpl.intervals  countud.bpl.names
test/output/: cegar1.bpl.out  cegar1.bpl.tree
